<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmailSender">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backButtonEmail"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="0dp"
                android:background="#00FFFFFF"
                android:scaleX="1.6"
                android:scaleY="1.6"
                app:srcCompat="@drawable/back_arrow_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textCompose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto"
                android:text="@string/compose"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/attachButton"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:background="#00000000"
                    android:contextClickable="false"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    app:srcCompat="@drawable/baseline_attachment_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/sendButton"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    android:src="@drawable/baseline_send_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/OptionsButton"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:background="#00000000"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    android:src="@drawable/round_menu_24"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/fromEmail"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/fromEmail"
                android:textAlignment="textStart"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/fromEmailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@null"
                android:ems="0"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#2B2B2B"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#A8A8A8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <TextView
                android:id="@+id/toEmail"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/toEmail"
                android:textAlignment="textStart"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/toEmailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@null"
                android:ems="0"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#2B2B2B"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#A8A8A8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <EditText
                android:id="@+id/subjectEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:background="@null"
                android:ems="0"
                android:fontFamily="@font/roboto"
                android:hint="@string/subject"
                android:inputType="textMultiLine"
                android:minHeight="64dp"
                android:padding="8dp"
                android:textColorHint="@color/gray" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#A8A8A8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3">

            <EditText
                android:id="@+id/messageEmailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@null"
                android:ems="0"
                android:fontFamily="@font/roboto"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:minHeight="64dp"
                android:padding="8dp"
                android:textColorHint="@color/gray" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>